@@ -64,6 +64,15 @@
     <content_attribute id="money-gambling">none</content_attribute>
   </content_rating>
   <releases>
+    <release version="40.beta" date="2021-02-05" type="development">
+      <description>
+        <p>Overview of changes in lightsoff 40.beta</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Rework UI to work better on smaller screens (Arnaud Bonatti)</li>
+        </ul>
+      </description>
+    </release>
     <release version="40.alpha" date="2021-01-10" type="development">
       <description>
         <p>Overview of changes in lightsoff 40.alpha</p>
