@@ -1,3 +1,9 @@
+Lights Off 40.beta
+==================
+
+* Updated translations
+* Rework UI to work better on smaller screens (Arnaud Bonatti)
+
 Lights Off 40.alpha
 ==================
 
